<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/my_toolbarTop_basic"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light" />


    <ScrollView
        android:id="@+id/inputCreateSpendScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbarTop_basic">

        <android.support.v7.widget.CardView
            android:id="@+id/inputCreateSpendCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:flexDirection="row"

                app:alignContent="stretch"
                app:alignItems="center"
                app:flexWrap="wrap"
                app:justifyContent="center"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/inputCreateSpendTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="지출 내역 입력"
                    android:textSize="25sp"

                    app:layout_flexBasisPercent="100%"
                    app:layout_order="1" />

                <LinearLayout style="@style/InputLinearLayoutStyle">

                    <TextView
                        android:id="@+id/inputCreateSpendSubclassDateTitle"
                        style="@style/InputSubclassTextStyle"
                        android:text="@string/dateTitle"
                        android:layout_gravity="start|center_vertical"/>

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/inputCreateSpendSubclassDateYearSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/inputCreateSpendSubclassDateMonthSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/inputCreateSpendSubclassDateDaySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout style="@style/InputLinearLayoutStyle">

                    <TextView
                        android:id="@+id/inputCreateSpendSubclassAccountTitle"
                        style="@style/InputSubclassTextStyle"
                        android:text="@string/accountTitle" />


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/inputCreateSpendSubclassAccountSpinner"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>

                <LinearLayout style="@style/InputLinearLayoutStyle">

                    <TextView
                        android:id="@+id/inputCreateSpendSubclassCategoryTitle"
                        style="@style/InputSubclassTextStyle"
                        android:text="@string/categoryTitle" />


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/inputCreateSpendSubclassCategorySpinner"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>

                <LinearLayout style="@style/InputLinearLayoutStyle">

                    <TextView
                        android:id="@+id/inputCreateSpendSubclassPriceTitle"
                        style="@style/InputSubclassTextStyle"
                        android:text="@string/priceTitle" />


                    <EditText
                        android:id="@+id/inputCreateSpendSubclassPriceEdit"
                        style="@style/InputSubclassEditTextStyle"
                        android:inputType="numberSigned" />

                </LinearLayout>


                <LinearLayout style="@style/InputLinearLayoutStyle">

                    <TextView
                        android:id="@+id/inputCreateSpendSubclassUsageTitle"
                        style="@style/InputSubclassTextStyle"
                        android:text="@string/usageTitle" />


                    <EditText
                        android:id="@+id/inputCreateSpendSubclassUsageEdit"
                        style="@style/InputSubclassEditTextStyle"
                        android:inputType="text" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/inputCreateSpendComplete"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/inputComplete" />

                    <Button
                        android:id="@+id/inputCreateSpendCancel"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/inputCancel" />

                </LinearLayout>


            </com.google.android.flexbox.FlexboxLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>


</android.support.constraint.ConstraintLayout>