<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/input_moneyflow_toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/styleAppBar"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light" />




    <LinearLayout
        android:id="@+id/input_moneyflow_type_button_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginVertical="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/input_moneyflow_content_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_moneyflow_toolbarTop"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.button.MaterialButton
            android:id="@+id/input_moneyflow_type_income"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/TypeIncome"
            android:textColor="@color/colorBlack"
            app:backgroundTint="@color/colorBackground"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_moneyflow_type_expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/input_moneyflow_type_expense"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/TypeExpense"
            android:textColor="@color/colorBlack"
            app:backgroundTint="@color/colorBackground"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_moneyflow_type_expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/input_moneyflow_type_Transfer"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/TypeTransfer"
            android:textColor="@color/colorBlack"
            app:backgroundTint="@color/colorBackground"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_moneyflow_type_expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/input_moneyflow_progresslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/input_moneyflow_type_button_layout"
        >

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            />

    </FrameLayout>

    <ScrollView
        android:id="@+id/input_moneyflow_content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_moneyflow_type_button_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:gravity="center"
                    android:rowCount="5">

                    <TextView
                        style="@style/style_InputSubclassText"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:background="@drawable/input_borderline_top"
                        android:text="날짜" />

                    <TextView
                        android:id="@+id/input_moneyflow_datepick"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_gravity="start|center_vertical"
                        android:background="@drawable/input_borderline_topleft"
                        android:padding="12dp"
                        android:text="2018-01-01"
                        android:textColor="@color/colorBlack"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_row="0"
                        android:layout_column="2"
                        android:layout_gravity="start|center_vertical"
                        android:background="@drawable/input_borderline_top"
                        android:padding="10dp"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/input_moneyflow_accounttitle"
                        style="@style/style_InputSubclassText"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:background="@drawable/input_borderline_top"
                        android:text="계좌" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_columnSpan="2"
                        android:layout_gravity="start|center_vertical"
                        android:background="@drawable/input_borderline_topleft"
                        android:padding="4dp"
                        android:textColor="@color/colorBlack">

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/input_moneyflow_accountspinner"
                            android:layout_width="340dp"
                            android:layout_height="39dp"
                            android:overlapAnchor="false"
                            android:spinnerMode="dropdown" />
                    </FrameLayout>


                    <TextView
                        android:id="@+id/input_moneyflow_categorytitle"
                        style="@style/style_InputSubclassText"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:background="@drawable/input_borderline_top"
                        android:text="분류" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:layout_columnSpan="2"
                        android:layout_gravity="start|center_vertical"
                        android:background="@drawable/input_borderline_topleft"
                        android:padding="4dp"
                        android:textColor="@color/colorBlack">

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/input_moneyflow_categoryspinner"
                            android:layout_width="340dp"
                            android:layout_height="39dp"
                            android:overlapAnchor="false"
                            android:spinnerMode="dropdown" />
                    </FrameLayout>

                    <TextView
                        style="@style/style_InputSubclassText"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:background="@drawable/input_borderline_top"
                        android:text="금액" />

                    <EditText
                        android:id="@+id/input_moneyflow_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_columnSpan="2"
                        android:layout_gravity="start"
                        android:background="@drawable/input_borderline_topleft"
                        android:inputType="numberSigned"
                        android:padding="11dp"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/style_InputSubclassText"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:background="@drawable/input_borderline_top"
                        android:layout_gravity="top"
                        android:text="내용" />

                    <EditText
                        android:id="@+id/input_moneyflow_content_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_columnSpan="2"
                        android:padding="11dp"
                        android:layout_gravity="start"
                        android:background="@drawable/input_borderline_topleft"
                        android:textColor="@color/colorBlack" />

                </GridLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.button.MaterialButton
                android:id="@+id/input_moneyflow_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="저장하기" />

        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>